--- a/tablesoft-java/JSoft/Reporte_Agente.jrxml
+++ b/tablesoft-java/JSoft/Reporte_Agente.jrxml
@@ -48,16 +48,9 @@ and T.fecha_envio < $P{FechaFin}  ;]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="146" splitType="Stretch">
-			<staticText>
-				<reportElement x="120" y="20" width="318" height="30" uuid="1239aa87-14c1-4283-94e1-680870cdaf65"/>
-				<textElement>
-					<font fontName="Arial" size="22" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Reporte de tickets por agente]]></text>
-			</staticText>
+		<band height="212" splitType="Stretch">
 			<textField>
-				<reportElement x="3" y="81" width="225" height="20" uuid="cc444155-2387-4fb7-b8af-fe1919c80502">
+				<reportElement x="3" y="105" width="225" height="20" uuid="cc444155-2387-4fb7-b8af-fe1919c80502">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -66,7 +59,7 @@ and T.fecha_envio < $P{FechaFin}  ;]]>
 				<textFieldExpression><![CDATA["ID del Agente: "  + $P{Agente_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="3" y="102" width="280" height="20" uuid="a74a0698-304f-4cee-922d-401fdb5daf3b">
+				<reportElement x="3" y="126" width="280" height="20" uuid="a74a0698-304f-4cee-922d-401fdb5daf3b">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -75,19 +68,45 @@ and T.fecha_envio < $P{FechaFin}  ;]]>
 				<textFieldExpression><![CDATA["Nombre: "  + $P{Agente_nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="3" y="124" width="467" height="18" uuid="869e589a-95b3-4828-b871-9d33a46f9755"/>
+				<reportElement x="3" y="148" width="467" height="18" uuid="869e589a-95b3-4828-b871-9d33a46f9755"/>
 				<textElement>
 					<font fontName="Arial" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Código: " + $P{Agente_codigo}]]></textFieldExpression>
 			</textField>
-			<image>
-				<reportElement x="487" y="2" width="60" height="60" uuid="0fb411b9-210d-45bd-822b-32e269a1f8d2"/>
-				<imageExpression><![CDATA[$P{IMAGEN_REPORTE}]]></imageExpression>
-			</image>
-			<line>
-				<reportElement x="0" y="70" width="555" height="1" uuid="fe3f27c3-9464-47e2-85ce-2c462c3ef8f3"/>
-			</line>
+			<textField>
+				<reportElement x="2" y="172" width="553" height="40" uuid="44a51083-ef04-44f7-ad6a-01735f7e101c">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement>
+					<font fontName="Arial" size="14" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Tickets enviados desde " + DATEFORMAT($P{FechaInicio},"dd-MM-YYYY") +  " hasta "  + DATEFORMAT($P{FechaFin}, "dd-MM-YYYY")]]></textFieldExpression>
+			</textField>
+			<frame>
+				<reportElement mode="Opaque" x="-20" y="6" width="595" height="90" forecolor="#006699" backcolor="#006699" uuid="7bd83b4d-8946-427d-a1a5-103203c3149e"/>
+				<staticText>
+					<reportElement x="17" y="-4" width="473" height="66" forecolor="#FFFFFF" uuid="1da6d9db-c226-4219-b2ac-5dfa1d9be006"/>
+					<box>
+						<pen lineColor="#FFFFFF"/>
+					</box>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Arial" size="30" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Reporte de tickets por agente]]></text>
+				</staticText>
+				<image>
+					<reportElement x="500" y="10" width="80" height="73" uuid="e80deb67-4028-43a0-8a4f-645787db996f"/>
+					<imageExpression><![CDATA[$P{IMAGEN_REPORTE}]]></imageExpression>
+				</image>
+				<staticText>
+					<reportElement x="17" y="50" width="449" height="29" forecolor="#FFFFFF" uuid="f3b50523-f4e1-4581-bf0f-5ccb059ab150"/>
+					<textElement textAlignment="Left">
+						<font fontName="Arial" size="18" isBold="false"/>
+					</textElement>
+					<text><![CDATA[Sistema de Bibliotecas]]></text>
+				</staticText>
+			</frame>
 		</band>
 	</title>
 	<detail>
