--- a/tablesoft-java/JSoft/Lista_Tareas_Ticket.jrxml
+++ b/tablesoft-java/JSoft/Lista_Tareas_Ticket.jrxml
@@ -56,15 +56,15 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="41" splitType="Stretch">
+		<band height="62" splitType="Stretch">
 			<line>
-				<reportElement x="1" y="0" width="542" height="1" uuid="5fcd5582-7511-40eb-9008-022578051a58"/>
+				<reportElement x="1" y="0" width="542" height="1" forecolor="#006699" uuid="5fcd5582-7511-40eb-9008-022578051a58"/>
 			</line>
 			<line>
-				<reportElement x="2" y="36" width="541" height="1" uuid="0c4ac240-3750-4f55-a8ab-72b773294a39"/>
+				<reportElement x="2" y="55" width="541" height="1" forecolor="#006699" uuid="0c4ac240-3750-4f55-a8ab-72b773294a39"/>
 			</line>
 			<staticText>
-				<reportElement x="176" y="3" width="135" height="30" uuid="c5081ef4-42e7-4d1a-848e-be965f653c38">
+				<reportElement x="156" y="3" width="94" height="48" uuid="c5081ef4-42e7-4d1a-848e-be965f653c38">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4a1d6a45-c383-4694-a61c-9f585ee56d8a"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -75,7 +75,7 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="37" y="3" width="135" height="30" uuid="215a5178-1590-4683-aef9-3a9913d8db49">
+				<reportElement x="37" y="3" width="100" height="48" uuid="215a5178-1590-4683-aef9-3a9913d8db49">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bf71c8c4-fbe8-4b25-b782-14e18b7cf09d"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -85,7 +85,7 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[Fecha de creación de la tarea]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="4" y="3" width="26" height="30" uuid="6a876340-828e-419f-be39-74aefa1d6a52">
+				<reportElement x="4" y="3" width="26" height="48" uuid="6a876340-828e-419f-be39-74aefa1d6a52">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="53878724-85ac-4790-b963-8f10c94534db"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -96,7 +96,7 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="321" y="3" width="135" height="30" uuid="ede402ca-9dba-4308-8a9c-f84bd3d719c1">
+				<reportElement x="260" y="3" width="196" height="48" uuid="ede402ca-9dba-4308-8a9c-f84bd3d719c1">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0e1dedaf-0881-40c0-98f0-51fcdf677807"/>
 				</reportElement>
 				<textElement>
@@ -105,7 +105,7 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[Descripcion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="466" y="3" width="74" height="30" uuid="f1e8d674-fc63-4796-892a-288e2b7fa29a">
+				<reportElement x="466" y="3" width="74" height="48" uuid="f1e8d674-fc63-4796-892a-288e2b7fa29a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="06ccf63c-7919-4fd0-ae59-275d74d86f3e"/>
 				</reportElement>
 				<textElement>
@@ -116,34 +116,34 @@ where T.ticket_id =  $P{Ticket_id} ;]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="47" splitType="Stretch">
+		<band height="46" splitType="Stretch">
 			<textField>
-				<reportElement x="4" y="10" width="26" height="30" uuid="aa30b334-68ae-41fb-8556-ae1a4764888b">
+				<reportElement x="4" y="4" width="26" height="39" uuid="aa30b334-68ae-41fb-8556-ae1a4764888b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a0a996bf-e1a4-48ac-ad9b-a863e2b26e08"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{tarea_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="37" y="12" width="135" height="30" uuid="3b522a5d-7971-4ce7-9859-39e33d3a3321">
+				<reportElement x="37" y="6" width="100" height="39" uuid="3b522a5d-7971-4ce7-9859-39e33d3a3321">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bd4513da-7458-41a6-9f64-cd629960ce98"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{fecha_creacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="176" y="13" width="135" height="30" uuid="acf61026-58f3-43ba-9399-ad0ffe1fc16f">
+				<reportElement x="156" y="6" width="94" height="39" uuid="acf61026-58f3-43ba-9399-ad0ffe1fc16f">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="683c43d6-f711-4ddd-afe0-a47d99c5d73f"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[IF($F{fecha_completado} == null,"-----",$F{fecha_completado} )]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="321" y="13" width="135" height="30" uuid="baac2144-30ae-4f10-8067-0650fe5b7c9a">
+				<reportElement x="260" y="7" width="196" height="39" uuid="baac2144-30ae-4f10-8067-0650fe5b7c9a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f0525a23-b022-4dc1-99f1-f25ae1f0d525"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="466" y="12" width="74" height="30" uuid="27b31b82-bded-4868-b2bd-ee576b1f6f96">
+				<reportElement x="466" y="6" width="74" height="39" uuid="27b31b82-bded-4868-b2bd-ee576b1f6f96">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3e8ab926-5ffc-4588-bfee-386e9e290d40"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[IF($F{completado}==1,"Completa","Incompleta")]]></textFieldExpression>
