--- a/tablesoft-java/JSoft/Lista_Transferencia_Ticket.jrxml
+++ b/tablesoft-java/JSoft/Lista_Transferencia_Ticket.jrxml
@@ -60,9 +60,9 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="36" splitType="Stretch">
+		<band height="44" splitType="Stretch">
 			<line>
-				<reportElement x="0" y="0" width="542" height="1" uuid="bb12f6fa-72c3-45b2-ae22-1ea2756446e4"/>
+				<reportElement x="0" y="0" width="542" height="1" forecolor="#006699" uuid="bb12f6fa-72c3-45b2-ae22-1ea2756446e4"/>
 			</line>
 			<staticText>
 				<reportElement x="3" y="5" width="26" height="30" uuid="a8f4aad1-9a14-45f1-92f7-88ef32b1182a">
@@ -76,7 +76,7 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="36" y="5" width="120" height="30" uuid="ceb02a74-d34a-49ac-99fa-381a6b7d00bb">
+				<reportElement x="36" y="5" width="94" height="30" uuid="ceb02a74-d34a-49ac-99fa-381a6b7d00bb">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bf71c8c4-fbe8-4b25-b782-14e18b7cf09d"/>
 				</reportElement>
 				<textElement>
@@ -85,7 +85,7 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[Escalado realizado por:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="166" y="5" width="80" height="30" uuid="4cbb1d0e-af7c-4184-8674-d45eb0528001">
+				<reportElement x="138" y="5" width="80" height="30" uuid="4cbb1d0e-af7c-4184-8674-d45eb0528001">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4a1d6a45-c383-4694-a61c-9f585ee56d8a"/>
 				</reportElement>
 				<textElement>
@@ -94,7 +94,7 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[Fecha del escalado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="254" y="5" width="100" height="30" uuid="e1caae1a-b8ab-4a9d-85c7-a0abc7949661">
+				<reportElement x="229" y="5" width="100" height="30" uuid="e1caae1a-b8ab-4a9d-85c7-a0abc7949661">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0e1dedaf-0881-40c0-98f0-51fcdf677807"/>
 				</reportElement>
 				<textElement>
@@ -103,7 +103,7 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				<text><![CDATA[Comentario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="359" y="5" width="100" height="30" uuid="1e98385a-1311-475d-9693-53fc9ab0d4a3">
+				<reportElement x="340" y="5" width="119" height="30" uuid="1e98385a-1311-475d-9693-53fc9ab0d4a3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="06ccf63c-7919-4fd0-ae59-275d74d86f3e"/>
 				</reportElement>
 				<textElement>
@@ -120,12 +120,15 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				</textElement>
 				<text><![CDATA[RUC]]></text>
 			</staticText>
+			<line>
+				<reportElement x="0" y="40" width="541" height="1" forecolor="#006699" uuid="2f8731f7-88e3-4b1b-8115-be800950405a"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="48" splitType="Stretch">
+		<band height="50" splitType="Stretch">
 			<textField>
-				<reportElement x="3" y="10" width="25" height="30" uuid="e840f5a8-1568-42bc-b7f8-5486e307dded">
+				<reportElement x="3" y="10" width="25" height="40" uuid="e840f5a8-1568-42bc-b7f8-5486e307dded">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="53878724-85ac-4790-b963-8f10c94534db"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -133,38 +136,35 @@ where TT.ticket_id =  $P{Ticket_id} ;]]>
 				<textFieldExpression><![CDATA[$F{transferencia_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="36" y="10" width="120" height="30" uuid="9b041579-5564-46b0-8476-8787c0c296ac">
+				<reportElement x="36" y="10" width="94" height="40" uuid="9b041579-5564-46b0-8476-8787c0c296ac">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bf71c8c4-fbe8-4b25-b782-14e18b7cf09d"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{nombrePersona}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="166" y="10" width="80" height="30" uuid="55c0d61a-65eb-4e14-bda3-2d1403265668">
+				<reportElement x="138" y="10" width="80" height="40" uuid="55c0d61a-65eb-4e14-bda3-2d1403265668">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4a1d6a45-c383-4694-a61c-9f585ee56d8a"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{fecha_transferencia}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="254" y="10" width="100" height="30" uuid="bcdfa06f-2bd6-4491-af6e-14974caad4ea">
+				<reportElement x="229" y="10" width="100" height="40" uuid="bcdfa06f-2bd6-4491-af6e-14974caad4ea">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0e1dedaf-0881-40c0-98f0-51fcdf677807"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{comentario}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="359" y="10" width="100" height="30" uuid="6e23c5b3-40bb-4f33-ae1d-d650ad7a1f45">
+				<reportElement x="340" y="10" width="119" height="40" uuid="6e23c5b3-40bb-4f33-ae1d-d650ad7a1f45">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="06ccf63c-7919-4fd0-ae59-275d74d86f3e"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{razon_social}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="465" y="10" width="75" height="30" uuid="1c9e7b4b-274c-4d07-8bf9-3519226d1a6c">
+				<reportElement x="465" y="10" width="75" height="40" uuid="1c9e7b4b-274c-4d07-8bf9-3519226d1a6c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="65808f16-0f09-4bc6-b1c2-a88504bec193"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{ruc}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="3" y="0" width="541" height="1" uuid="1226b69f-d262-4781-a1bc-0ecefc9fd673"/>
-			</line>
 		</band>
 	</detail>
 </jasperReport>
